Bug 464529 - Cursor is invisible when using tablet in Wayland session
Summary: Cursor is invisible when using tablet in Wayland session
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: wayland-generic (other bugs)
Version First Reported In: 5.26.90
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: regression, wayland-only
: 464913 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-01-19 22:55 UTC by subdivide.thievish72
Modified: 2023-02-02 18:15 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description subdivide.thievish72 2023-01-19 22:55:35 UTC
SUMMARY
In the Plasma Wayland session on 5.26.90, the cursor is invisible when moving the cursor around with a tablet pen on a drawing tablet (wacom, etc).

STEPS TO REPRODUCE
1. Move cursor around with tablet pen on tablet (such as a wacom intuos tablet)

OBSERVED RESULT
Cursor is invisible

EXPECTED RESULT
Cursor should be visible

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: EndeavourOS (kernel: 6.1.6-arch1-3)
KDE Plasma Version: 5.26.90
KDE Frameworks Version: 5.102.0
Qt Version: 5.15.8

ADDITIONAL INFORMATION
Tablet: Huion H610PRO
Comment 1 Nicolas Fella 2023-01-20 11:48:16 UTC
Can confirm, works as expected on 5.26.5 but not in master/beta
Comment 2 Marco Martini 2023-01-20 12:45:34 UTC
I can confirm this (Plasma Gentoo 5.26.90 through the kde overlay).
X11 works fine and so does 5.26.5.
Comment 3 Vlad Zahorodnii 2023-01-20 16:57:31 UTC
Git commit 0d44092db28dbb1fc2d38d7a9a3e6571e247bd4e by Vlad Zahorodnii.
Committed on 20/01/2023 at 12:47.
Pushed by vladz into branch 'master'.

wayland: Fix invisible tablet cursor

A cursor source is created but it's not attached to the cursor.

M  +1    -0    src/input.cpp

https://invent.kde.org/plasma/kwin/commit/0d44092db28dbb1fc2d38d7a9a3e6571e247bd4e
Comment 4 Vlad Zahorodnii 2023-01-21 09:38:09 UTC
Git commit c9fdf1157336f52de521f05555dfbbaca85cb002 by Vlad Zahorodnii.
Committed on 21/01/2023 at 09:38.
Pushed by vladz into branch 'cherry-pick-0d44092d'.

wayland: Fix invisible tablet cursor

A cursor source is created but it's not attached to the cursor.


(cherry picked from commit 0d44092db28dbb1fc2d38d7a9a3e6571e247bd4e)

M  +1    -0    src/input.cpp

https://invent.kde.org/plasma/kwin/commit/c9fdf1157336f52de521f05555dfbbaca85cb002
Comment 5 Vlad Zahorodnii 2023-02-02 18:15:38 UTC
*** Bug 464913 has been marked as a duplicate of this bug. ***