wayland: Fix invisible tablet cursor

A cursor source is created but it's not attached to the cursor.

BUG: 464529


(cherry picked from commit 0d44092db28dbb1fc2d38d7a9a3e6571e247bd4e)